--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="work">
                 <div class="slider">
                     <div class="card">
-                        <div class="img"><img src="C:\Users\91639\Downloads\1_qaxcs9.png" alt="img" draggable="false"></div>
+                        <div class="img"><img src="https://github.com/Amna-Salmani/assignment_fyle_amna/blob/main/1_qaxcs9.png?raw=true" draggable="false"></div>
                         <div class="layer">
                             <img src="https://digitalsparkagency.netlify.app/Assets/icons/icon.svg" alt="">
                             <h3>WEB DEVELOPMENT</h3>
