--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <div class="img"><img src="C:\Users\91639\Downloads\3_xobr0b.png" alt="img" draggable="false"></div>
+                        <div class="img"><img src="https://github.com/Amna-Salmani/assignment_fyle_amna/blob/main/3_xobr0b.png?raw=true" alt="img" draggable="false"></div>
                         <div class="layer">
                             <img src="https://digitalsparkagency.netlify.app/Assets/icons/icon.svg" alt="">
                             <h3>WEB DEVELOPMENT</h3>
