--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <div class="img"><img src="C:\Users\91639\Downloads\1_qaxcs9.png" alt="img" draggable="false"></div>
+                        <div class="img"><img src="https://github.com/Amna-Salmani/assignment_fyle_amna/blob/main/1_qaxcs9.png?raw=true" alt="img" draggable="false"></div>
                         <div class="layer">
                             <img src="https://digitalsparkagency.netlify.app/Assets/icons/icon.svg" alt="">
                             <h3>WEB DEVELOPMENT</h3>
@@ -122,7 +122,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <div class="img"><img src="C:\Users\91639\Downloads\2_du9r0v.png" alt="img" draggable="false"></div>
+                        <div class="img"><img src="https://github.com/Amna-Salmani/assignment_fyle_amna/blob/main/2_du9r0v.png?raw=true" alt="img" draggable="false"></div>
                         <div class="layer">
                             <img src="https://digitalsparkagency.netlify.app/Assets/icons/icon.svg" alt="">
                             <h3>WEB DEVELOPMENT</h3>
@@ -132,7 +132,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <div class="img"><img src="C:\Users\91639\Downloads\3_xobr0b.png" alt="img" draggable="false"></div>
+                        <div class="img"><img src="https://github.com/Amna-Salmani/assignment_fyle_amna/blob/main/3_xobr0b.png?raw=true" alt="img" draggable="false"></div>
                         <div class="layer">
                             <img src="https://digitalsparkagency.netlify.app/Assets/icons/icon.svg" alt="">
                             <h3>WEB DEVELOPMENT</h3>
@@ -142,7 +142,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <div class="img"><img src="C:\Users\91639\Downloads\1_qaxcs9.png" alt="img" draggable="false"></div>
+                        <div class="img"><img src="https://github.com/Amna-Salmani/assignment_fyle_amna/blob/main/1_qaxcs9.png?raw=true" alt="img" draggable="false"></div>
                         <div class="layer">
                             <img src="https://digitalsparkagency.netlify.app/Assets/icons/icon.svg" alt="">
                             <h3>WEB DEVELOPMENT</h3>
@@ -152,7 +152,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <div class="img"><img src="C:\Users\91639\Downloads\2_du9r0v.png" alt="img" draggable="false"></div>
+                        <div class="img"><img src="https://github.com/Amna-Salmani/assignment_fyle_amna/blob/main/2_du9r0v.png?raw=true" alt="img" draggable="false"></div>
                         <div class="layer">
                             <img src="https://digitalsparkagency.netlify.app/Assets/icons/icon.svg" alt="">
                             <h3>WEB DEVELOPMENT</h3>
@@ -162,7 +162,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <div class="img"><img src="C:\Users\91639\Downloads\3_xobr0b.png" alt="img" draggable="false"></div>
+                        <div class="img"><img src="https://github.com/Amna-Salmani/assignment_fyle_amna/blob/main/3_xobr0b.png?raw=true" alt="img" draggable="false"></div>
                         <div class="layer">
                             <img src="https://digitalsparkagency.netlify.app/Assets/icons/icon.svg" alt="">
                             <h3>WEB DEVELOPMENT</h3>
