--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Marketing Agency</title>
+    <title>Digital Marketing Website</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="use.css">
     <link rel="icon" type="image/x-icon" href="Assets/icons/heart (2).svg" />
